[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-superintendent-env"
version = "1.0.0"
description = "An OpenEnv-compliant RL environment for construction scheduling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"